z-index fixed

--- a/assets/individual/css/individual.css
+++ b/assets/individual/css/individual.css
@@ -140,7 +140,7 @@ button {
 
 .navbar {
     position:fixed;
-    z-index: 5;
+    z-index: 50;
     top: 0;
     left: 0;
     display: flex;
@@ -175,7 +175,7 @@ button {
 }
 
 .navbar-burger {
-    z-index: 5;
+    z-index: 50;
     top: 0;
     right: 0;
     display: grid;
@@ -191,11 +191,11 @@ button {
 
 body.open .navbar-burger {
     background-image: url("../../adoption/css/img/close.svg");
-    z-index: 5;
+    z-index: 50;
 }
 
 .menu {
-    z-index: 2;
+    z-index: 20;
     top: 0;
     left: 0;
     display: flex;
@@ -325,146 +325,6 @@ body.open .menu>a {
     transform: scaleX(1);
 }
 
-/* Shopping Cart icon */
-
-.cart-ctn {
-    margin-left: auto;
-    position: relative;
-    margin-right: 0.5rem;
-}
-
-.cart-icon:hover {
-    cursor: pointer;
-    color: var(--Very-dark-blue);
-}
-
-.cart-notify {
-    font-size: 0.55rem;
-    position: absolute;
-    top: -5px;
-    right: -5px;
-    font-weight: bold;
-    line-height: 1.4;
-    padding: 0rem 0.4rem;
-    color: var(--White);
-    border-radius: 50px;
-    background: var(--Orange);
-    display: none;
-}
-
-.show-cart-notification {
-    display: block;
-}
-
-/* Cart modal */
-
-.cart-modal {
-    width: 350px;
-    height: 230px;
-    top: 5.5rem;
-    left: 50%;
-    z-index: 10;
-    transform: translateX(50%);
-    opacity: 0;
-    position: absolute;
-    border-radius: 10px;
-    background: var(--White);
-    transition: all 500ms ease-in-out;
-    box-shadow: 10px 10px 30px rgba(0, 0, 0, 0.2),
-        -10px 10px 30px rgba(0, 0, 0, 0.2);
-}
-
-.cart-modal__title-ctn {
-    padding: 1rem 1.5rem;
-    border-bottom: 1px solid var(--Grayish-blue);
-}
-
-.cart-content-ctn {
-    padding: 1.5rem;
-    height: 170px;
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    justify-content: center;
-}
-
-.empty-cart-text {
-    font-weight: bold;
-    font-size: 1.05rem;
-    color: var(--Dark-grayish-blue);
-}
-
-.cart-content-ctn .pdt-info-ctn {
-    display: flex;
-    gap: 1rem;
-    align-items: center;
-    margin-bottom: 1.5rem;
-}
-
-.pdt-info-ctn .pdt-preview-ctn {
-    width: 2.75em;
-}
-
-.pdt-preview-ctn img {
-    border-radius: 5px;
-}
-
-.cart-modal__pdt-qnty-ctn {
-    color: var(--Dark-grayish-blue);
-}
-
-.cart-modal__pdt-qnty span.total-price {
-    color: var(--Very-dark-blue);
-    font-weight: bold;
-}
-
-.cart-modal__delete-icon-ctn {
-    margin-left: auto;
-    cursor: pointer;
-}
-
-.cart-modal .checkout-btn {
-    width: 100%;
-    border: none;
-    padding: 0.75rem 0;
-    color: var(--White);
-    font-size: 1rem;
-    font-weight: bold;
-    border-radius: 10px;
-    cursor: pointer;
-    background: var(--Orange);
-    box-shadow: 0px 5px 20px var(--Pale-orange);
-}
-
-.checkout-btn {
-    opacity: 1;
-    transition: opacity 300ms;
-}
-
-.checkout-btn:hover {
-    opacity: 0.6;
-}
-
-/* Cart modal should only be visible when cart icon is clicked */
-
-.show-card-modal {
-    display: block;
-    opacity: 1;
-    transform: translateX(-50%);
-}
-
-/* User profile circle  */
-
-.user-pf-ctn {
-    width: 1.75rem;
-    border-radius: 50%;
-}
-
-.user-pf-ctn:hover {
-    cursor: pointer;
-    border: 2px solid var(--Orange);
-}
-
 @media screen and (min-width: 800px) {
     .container {
         padding-bottom: 2rem;
@@ -488,7 +348,7 @@ body.open .menu>a {
         color: var(--Dark-grayish-blue);
         position: relative;
         padding: 0;
-        z-index: 50;
+        z-index: 500;
         width: auto;
         flex-direction: row;
         transform: translateX(0%);
@@ -663,9 +523,6 @@ main {
 
 .pdt-showcase-ctn__desktop {
     display: none;
-    background: radial-gradient(rgba(52, 52, 52, 0.7) 30%, rgba(0, 0, 0, 0) 70%);
-    border-radius: 3rem;
-    /* box-shadow: rgba(0, 0, 0, 0.7) 0px 5px 15px; */
     width: 100vh !important;
 }
 
@@ -796,7 +653,7 @@ main {
     position: absolute;
     top: 50%;
     left: 50%;
-    z-index: 1000;
+    z-index: 10;
     padding: 2rem 2.1rem 0;
     display: flex;
     flex-direction: column;
@@ -825,7 +682,7 @@ main {
 .main-pdt-slideshow__modal {
     border-radius: 15px;
     background-color: var(--White);
-}
+    box-shadow: rgba(0, 0, 0, 0.25) 0px 54px 55px, rgba(0, 0, 0, 0.12) 0px -12px 30px, rgba(0, 0, 0, 0.12) 0px 4px 6px, rgba(0, 0, 0, 0.17) 0px 12px 13px, rgba(0, 0, 0, 0.09) 0px -3px 5px;}
 
 .pdt-img__modal {
     border-radius: 15px;
